# pydanticInput

./: pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
pydanticInput/: __init__.py  dispatch.py  handlers.py  main.py  opts.py  widgets.py
pydanticInput/handlers/: pydantic_types.py  special_forms.py  std_types.py
tests/: test.py
