[project]
name = "pydanticInput"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "M Laraib Ali", email = "laraib.ali@soco-engineers.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "pyside6-essentials>=6.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
